Thu Sep 27 14:22:41 2001  Tim Janik  <timj@gtk.org>

	* Makefile.am: ensure that a gsl->bse link is in place.

Thu Sep 27 14:10:55 2001  Tim Janik  <timj@gtk.org>

	* bsw/bsw.h: 
	* bsw/bswproxy.h: BSE procedure API wrapper. this shall become
	the only public API for BSE one day.

	* beast-gtk/*: a bunch of code is already proted to using BSW
	functions. however, a few unresolved fundamental problems still
	remain, which is why BSE is still being used directly in a lot
	of places.

Thu Sep 27 13:23:21 2001  Tim Janik  <timj@gtk.org>

	* lots of project shuffeling. blib got removed. we're
	depending on just glib-2.0, gtk+-2.0 and libart_lgpl+libgnomecanvas
	now.

	* beast-gtk/*: lots of adaptions to new gtk code. many new canvas
	workarounds <urgl>.
	new widgets got added as views to new BSE core objects.
	also, there're starts at sample editing and preview GUIs.

Sun Jun 18 21:14:18 2000  Tim Janik  <timj@gtk.org>

	* beast-gtk/bststatusbar.c (bst_status_bar_ensure): provide status bar
	border.

Mon May 29 02:42:41 2000  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpatterneditor.[hc]: added signal for focus changes.
	pass light_gc into effect drawing code, macro cleanups to avoid
	accessing BsePattern fields directly.

	* bsteffectview.[hc]: new container to provide effect views per
	note, similar to BstItemView, but doesn't inherit from it, because
	effects are not items and have certain constraints (only one
	BseEffect derived type may exist per note).

	* bstpatterndialog.[hc]: embed effect view container to allow effect
	editing of pattern notes.

	* bstutils.[hc]: moved some GtkCList workarounds from various code
	portions here to 1) maintain them in a single place, 2) be able to
	use them all around beast code, 3) keep all Gtk kludges in one
	source file for reference.

Thu May 25 06:22:35 2000  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstitemview.[hc]: aggregate the paned container,
	don't inherit from it. so we keep the underlying container