@@ -79,7 +79,7 @@ METHOD (BseItem, get-type) {
 }
 
 METHOD (BseItem, get-type-name) {
-  HELP	= "Retrive Type Name";
+  HELP	= "Retrieve Type Name";
   IN	= g_param_spec_object ("item", "Item", NULL,
 			       BSE_TYPE_ITEM, BSE_PARAM_DEFAULT);
   OUT	= g_param_spec_string ("type_name", "Type Name", NULL,
@@ -98,6 +98,30 @@ METHOD (BseItem, get-type-name) {
   
   /* set output parameters */
   g_value_set_string (out_values++, g_type_name (G_OBJECT_TYPE (item)));
+  
+  return BSE_ERROR_NONE;
+}
+
+METHOD (BseItem, get-type-blurb) {
+  HELP	= "Retrieve Type Description";
+  IN	= g_param_spec_object ("item", "Item", NULL,
+			       BSE_TYPE_ITEM, BSE_PARAM_DEFAULT);
+  OUT	= g_param_spec_string ("type_blurb", "Type Blurb", NULL,
+			       NULL,
+			       BSE_PARAM_DEFAULT);
+} BODY (BseProcedureClass *proc,
+	GValue            *in_values,
+	GValue            *out_values)
+{
+  /* extract parameter values */
+  BseItem *item = (BseItem*) g_value_get_object (in_values++);
+  
+  /* check parameters */
+  if (!BSE_IS_ITEM (item))
+    return BSE_ERROR_PROC_PARAM_INVAL;
+  
+  /* set output parameters */
+  g_value_set_string (out_values++, bse_type_blurb (G_OBJECT_TYPE (item)));
   
   return BSE_ERROR_NONE;
 }
