@@ -279,6 +279,7 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 MC_PROG_CC_WITH_CFLAGS
 MC_PROG_CXX_WITH_CXXFLAGS
 AC_PROG_CPP
+AC_PROG_CXX
 AC_PROG_CXXCPP
 AC_C_CONST
 AC_C_INLINE
